Fix: white space when resizing

--- a/html/home/css/account.css
+++ b/html/home/css/account.css
@@ -49,7 +49,6 @@ button {
 #btn_renew_apikey, #btn_copy_clipboard {
     padding: 2px 10px;
     width: fit-content;
-    margin-right: 5px;
 }
 
 #btn_renew_apikey:active {
